# pre-commit-clang-tidy

./: .gitignore  .pre-commit-hooks.yaml  README.md  example.clang-tidy  pyproject.toml
example-project/: CMakeLists.txt
example-project/src/: main.cpp
src/clang_tidy_precommit/: cli.py
